# string_theory_search

./: .gitignore  CLAUDE.md  CRITICAL_TODO.md  Cargo.toml  FORMULAS.md  NOTES.md  README.md  RESEARCH_QUESTIONS.md  TODO.md  compute_all_heuristics.py  config.example.toml  download_all_polytopes.py  filter_three_gen.py  meta_genetic.py  mise.toml  new_indices.npy  physics_bridge.py  polytope_embeddings.py  pyproject.toml  run_workers.sh  setup_server.sh  workers.sh
mcallister_2107/: BASIS_INDEX_MISMATCH_V1.md  BASIS_INDEX_MISMATCH_V1_RESPONSE.md  CLAUDE.md  CURVE_DISCREPANCY.md  EK0_FORMULA_DISCREPANCY.md  EK0_FORMULA_DISCREPANCY_RESOLUTION.md  GV_INVARIANTS_MIN_POINTS_CONVERGENCE.md  HOW_KM_WERE_CHOSEN.md  LATEST_CYTOOLS_CONVERSION.md  LATEST_CYTOOLS_CONVERSION_CORRECTED.md  LATEST_CYTOOLS_CONVERSION_RESULT.md  PRIMAL_TRIANGULATION.md  RACETRACK_SECTION_6.4.md  REPRODUCTION_OUTLINE.md  SETUP.md  _fixme_full_pipeline_latest_cytools.py  _fixme_search_km_via_basic_genetic_algo.py  _fixme_search_km_via_pure_sampling.py  compute_V_string.py  compute_c_i.py  compute_divisor_cohomology.py  compute_gv_invariants.py  compute_kklt_iterative.py  compute_rigidity_combinatorial.py  compute_target_tau.py  compute_triangulation.py  debug_curve_basis.py  debug_kappa_convention.py  debug_kappa_p3.py  debug_missing_curves.py  debug_verify_V0_formula.py  debug_w0.py  derive_racetrack.py  derive_t_from_glsm.py  find_transformation_v1.py  find_transformation_v2.py  find_transformation_v3.py  full_pipeline.py  full_pipeline_latest_cytools.py  get_kappa_2021.py  (+17 more)
mcallister_2107/2021_cytools/: benchmark_gv_invariant_computation.py  compute_V_string.py  compute_c_i.py  compute_chi_divisor.py  compute_derived_racetrack.py  compute_divisor_cohomology.py  compute_gv_invariants.py  compute_kklt_iterative.py  compute_rigidity_combinatorial.py  compute_target_tau.py  compute_triangulation.py
mcallister_2107/latest_cytools/: compute_basis_transform.py  compute_c_i.py  compute_rigidity_combinatorial.py  compute_triangulation.py
src/: db.rs  (+14 more)
(+162 files in other folders)
