[package]
name = "string_theory"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "25"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
env_logger = "0.11"
log = "0.4"
glyphon = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["auto-initialize", "abi3-py311"] }
chrono = "0.4"
ctrlc = "3.4"
