[project]
name = "string-theory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "jax",
    "jaxlib",
    "cygv",
    "pytest",
    "cytools",
    "cymyc",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
cytools = { path = "vendor/cytools_latest", editable = true }
cymyc = { path = "../cymyc_source", editable = true }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
